# brne_social_navigation

./: README.md
brnelib/: CMakeLists.txt  package.xml
brnelib/src/: brne.cpp
crowd_nav/: CMakeLists.txt  README.md  package.xml
crowd_nav/config/: params.yaml
crowd_nav/launch/: crowd_nav.launch  go1_controller.launch
crowd_nav/scripts/: bre_nav.py
crowd_nav/scripts/brne_py/: traj_tracker.py
crowd_nav/src/: arena_brne_nav.cpp  brne_nav.cpp  controller.cpp  mbf_exe_path_test.cpp  pub_goal.cpp
crowd_nav_interfaces/: CMakeLists.txt  package.xml
